# travel-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: com.travel-agent.daily.plist  install_travel_schedule.sh  publish_to_github.sh  run_travel_daily.sh  uninstall_travel_schedule.sh
travel_agent/: __init__.py  __main__.py  aggregate.py  clean.py  config.py  email.py  extract.py  fetch.py  models.py  render.py  render_html.py  runner.py  sites.py  urls.py
wizzair/: .env.example  README.md  pyproject.toml  requirements.txt
wizzair/scripts/: com.wizzair.afternoon.plist  com.wizzair.daily.plist  install_wizzair_schedule.sh  run_wizzair_afternoon.sh  run_wizzair_daily.sh  run_wizzair_morning.sh  uninstall_wizzair_schedule.sh
wizzair/wizzair/: __init__.py  __main__.py  api.py  browser.py  config.py  email.py  models.py  multipass.py  render.py  render_html.py  routes.py  scanner.py  search.py  snapshot.py  ui_search.py  urls.py
